updated html file

--- a/index.html
+++ b/index.html
@@ -48,7 +48,58 @@
 <!-- Cart Start -->
 <div class="cart">
     <p>Crat / Home</p>
-     
+    <div class="cart-details">
+      <div class="product">
+        <p>Product</p>
+        <div class="product-details">
+          <img src="Assets/cart/Monitor-Cart-Small.png" alt="Monitor">
+          <p>LCD Monitor</p>
+        </div>
+        <div class="product-details">
+          <img src="Assets/cart/Gamepad-Cart-Small.png" alt="Gamepad">
+          <p>LCD Monitor</p>
+        </div>
+      </div>
+      <div class="price">
+        <p>Price</p>
+        <div class="price-details">
+          <p>$650</p>
+          <p>$650</p>
+        </div>
+      </div>
+      <div class="quantity">
+        <p>Quantity</p>
+        <div class="quantity-details">
+          <button class="btn-quantity">
+            <p>1</p>
+            <div class="btn-img">
+              <img src="Assets/cart/Drop-Up-Small (1).png" alt="" class="dropdown-up">
+              <img src="Assets/cart/Drop-Down-Small (2).png" alt="" class="dropdown-down">
+            </div> 
+          </button>
+        </div>
+        <div class="quantity-details">
+          <button class="btn-quantity">
+            <p>1</p>
+            <div class="btn-img">
+              <img src="Assets/cart/Drop-Up-Small (1).png" alt="" class="dropdown-up">
+              <img src="Assets/cart/Drop-Down-Small (2).png" alt="" class="dropdown-down">
+            </div> 
+          </button>
+        </div>
+      </div>
+      <div class="subtotal">
+        <p>SubTotal</p>
+        <div class="subtotal-details">
+          <p>$650</p>
+          <p>$650</p>
+        </div>
+      </div>
+    </div>
+    <div class="btn">
+      <button class="cart-btn">Return To Shop</button>
+      <button class="cart-btn">Updated Cart</button>
+    </div>    
 </div>
 <!-- Cart End -->
 <!-- Footer Start -->
