Updated html file

--- a/index.html
+++ b/index.html
@@ -32,10 +32,16 @@
       </form>
         <div class="icons">
           <a href="#">
-            <img class="love" src="Assets/header&nav/Wishlist.png" alt="Wishlist">
+            <img class="love" src="Assets/header&nav/Vector.png" alt="love">
+            <div class="rectangel-4">
+              4
+            </div>
           </a>
           <a href="#">
-            <img class="shop" src="Assets/header&nav/Cart1 with buy.png" alt="shop">
+            <img class="shop" src="Assets/header&nav/Cart1.png" alt="shop">
+            <div class="rectangel-2">
+              2
+            </div>
           </a>
           <a href="#">
             <img class="user" src="Assets/header&nav/user.png" alt="user">
@@ -52,7 +58,10 @@
       <div class="product">
         <p>Product</p>
         <div class="product-details">
-          <img src="Assets/cart/Monitor-Cart-Small.png" alt="Monitor">
+          <div class="monitor-cancel">
+            <img src="Assets/cart/Monitor-Cart-Small.png" alt="Monitor" class="monitor">
+            <img src="Assets/cart/icon-cancel.png" alt="" class="cancel">
+          </div>
           <p>LCD Monitor</p>
         </div>
         <div class="product-details">
@@ -100,6 +109,32 @@
       <button class="cart-btn">Return To Shop</button>
       <button class="cart-btn">Updated Cart</button>
     </div>    
+</div>
+<div class="total-cart">
+  <div class="total-cart-left">
+    <button class="cupone-code">Cupone Code</button>
+    <button class="appling-cupone">Appling Cupone</button>
+  </div>
+  <div class="total-cart-right">
+    <div class="total-cart-container">
+      <h3>Total Cart</h3>
+      <div class="cart-price">
+        <p>subtotal:</p>
+        <p>$1750</p>
+      </div>
+      <hr>
+      <div class="cart-price">
+        <p>shipping:</p>
+        <p>Free</p>
+      </div>
+      <hr class="hr-1">
+      <div class="cart-price">
+        <p>Total:</p>
+        <p>$1750</p>
+      </div>
+      <button class="checkout">Procees to checkout</button>
+    </div>
+  </div>
 </div>
 <!-- Cart End -->
 <!-- Footer Start -->
